# Copyright (C) 2009 Nikolai Kondrashov
#
# This file is part of hidrd.
#
# Hidrd is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# Hidrd is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with hidrd; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

SUBDIRS = pfx

hidrd_itemdir = $(includedir)/hidrd/item

hidrd_item_HEADERS = \
    any.h                   \
    basic.h                 \
    collection.h            \
    delimiter.h             \
    designator_index.h      \
    designator_maximum.h    \
    designator_minimum.h    \
    end_collection.h        \
    feature.h               \
    global.h                \
    input.h                 \
    local.h                 \
    logical_maximum.h       \
    logical_minimum.h       \
    long.h                  \
    main.h                  \
    output.h                \
    pfx.h                   \
    physical_maximum.h      \
    physical_minimum.h      \
    pop.h                   \
    push.h                  \
    report_count.h          \
    report_id.h             \
    report_size.h           \
    short.h                 \
    string_index.h          \
    string_maximum.h        \
    string_minimum.h        \
    type.h                  \
    unit.h                  \
    unit_exponent.h         \
    usage.h                 \
    usage_maximum.h         \
    usage_minimum.h         \
    usage_page.h

